--- a/features/history.yml.dist
+++ b/features/history.yml.dist
@@ -32,6 +32,20 @@ compat_features:
   - api.History.length
   - api.Window.history
 
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "4"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "4"
+  #   firefox_android: "4"
+  #   safari: "6"
+  #   safari_ios: "6"
+  - api.PopStateEvent
+  - api.PopStateEvent.state
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -74,6 +88,19 @@ compat_features:
   - api.History.state
 
   # baseline: high
+  # baseline_low_date: 2016-08-02
+  # baseline_high_date: 2019-02-02
+  # support:
+  #   chrome: "16"
+  #   chrome_android: "18"
+  #   edge: "14"
+  #   firefox: "11"
+  #   firefox_android: "14"
+  #   safari: "6"
+  #   safari_ios: "6"
+  - api.PopStateEvent.PopStateEvent
+
+  # baseline: high
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
@@ -85,3 +112,12 @@ compat_features:
   #   safari: "11"
   #   safari_ios: "11"
   - api.History.scrollRestoration
+
+  # baseline: false
+  # support:
+  #   chrome: "118"
+  #   chrome_android: "118"
+  #   edge: "118"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - api.PopStateEvent.hasUAVisualTransition
