--- a/features/reporting.yml
+++ b/features/reporting.yml
@@ -1,5 +1,5 @@
 name: Reporting API
-description: The Reporting API is a generic way to make reports available based on various platform features in a consistent manner, such as information about Content Security Policy, Permissions-Policy, or feature deprecations.
+description: The Reporting API makes consistent reports about Content Security Policy violations, Permissions-Policy violations, deprecated feature usage, crashes, and other web platform features available to your server endpoints.
 spec: https://w3c.github.io/reporting/
 compat_features:
   - api.Report
