--- a/features/reporting.yml
+++ b/features/reporting.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-10-21
 name: Reporting API
-description: TODO
+description: The Reporting API makes consistent reports about Content Security Policy violations, Permissions-Policy violations, deprecated feature usage, crashes, and other web platform features available to your server endpoints.
 spec: https://w3c.github.io/reporting/
 compat_features:
   - api.Report
