--- a/features/resize-observer.yml
+++ b/features/resize-observer.yml
@@ -1,5 +1,5 @@
 name: Resize observer
-description: The `ResizeObserver` API is for observing and reacting to changes in the size of DOM elements.
+description: The `ResizeObserver` API observes and reacts to changes in the size of DOM elements.
 spec: https://drafts.csswg.org/resize-observer-1/
 caniuse: resizeobserver
 # Computed to match Caniuse.
