--- a/features/resize-observer.yml
+++ b/features/resize-observer.yml
@@ -1,7 +1,10 @@
-draft_date: 2024-10-21
-name: Resize Observer
-description: TODO
+name: Resize observer
+description: The `ResizeObserver` API observes and reacts to changes in the size of DOM elements.
 spec: https://drafts.csswg.org/resize-observer-1/
+caniuse: resizeobserver
+# Computed to match Caniuse.
+status:
+  compute_from: api.ResizeObserver
 compat_features:
   - api.ResizeObserver
   - api.ResizeObserver.ResizeObserver
