--- a/features/content-index.yml
+++ b/features/content-index.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
 name: Content Index
-description: TODO
+description: The Content Index API allows developers to register their offline enabled content with the browser.
 spec: https://wicg.github.io/content-index/spec/
 compat_features:
   - api.ContentIndex
