--- a/features/file.yml
+++ b/features/file.yml
@@ -1,5 +1,5 @@
 name: File
-description: The `File` API provides information about files and allows JavaScript in a web page to access their content.
+description: The `File` API provides information about files and allows JavaScript in a web page to create new files, and access existing files and their content.
 spec: https://w3c.github.io/FileAPI/
 caniuse: fileapi
 # Compute status to match Caniuse while also pointing at the main entry point.
