reinstate node token

--- a/.github/workflows/refresh_downstream.yml
+++ b/.github/workflows/refresh_downstream.yml
@@ -35,6 +35,8 @@ jobs:
           cd packages/baseline-browser-mapping
           npm run prepare
           npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - if: steps.publish-to-npm.outcome == 'success'
         id: push-to-main
