--- a/.github/workflows/refresh_downstream.yml
+++ b/.github/workflows/refresh_downstream.yml
@@ -12,6 +12,10 @@ jobs:
   refresh-downstream-browsers-json:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
