--- a/.github/workflows/refresh_downstream.yml
+++ b/.github/workflows/refresh_downstream.yml
@@ -13,8 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
-      id-token: write
+      contents: write
 
     steps:
       - uses: actions/checkout@v2
