--- a/features/devicepixelratio.yml
+++ b/features/devicepixelratio.yml
@@ -1,5 +1,5 @@
 name: devicePixelRatio
-description: The `Window.devicePixelRatio` read-only property returns the ratio of the vertical size of one physical pixel on the current display device to the size of one CSS pixel.
+description: The `window.devicePixelRatio` read-only property returns the ratio of the size of one CSS pixel to the vertical size of one physical pixel on the current display device.
 spec: https://drafts.csswg.org/cssom-view-1/#dom-window-devicepixelratio
 caniuse: devicepixelratio
 compat_features:
