--- a/features/channel-messaging.yml
+++ b/features/channel-messaging.yml
@@ -14,3 +14,4 @@ compat_features:
   - api.MessagePort.message_event
   - api.MessagePort.postMessage
   - api.MessagePort.start
+  - api.MessagePort.worker_support
