--- a/features/dom.yml.dist
+++ b/features/dom.yml.dist
@@ -73,6 +73,7 @@ compat_features:
   - api.Document.links
   - api.Document.referrer
   - api.Document.title
+  - api.Document.write
   - api.Element
   - api.Element.attributes
   - api.Element.getAttribute
@@ -152,6 +153,7 @@ compat_features:
   #   firefox_android: "4"
   #   safari: "1.2"
   #   safari_ios: "1"
+  - api.Document.designMode
   - api.Node.childNodes
 
   # baseline: high
@@ -359,6 +361,32 @@ compat_features:
   - api.TreeWalker.previousSibling
   - api.TreeWalker.root
   - api.TreeWalker.whatToShow
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "6"
+  #   firefox_android: "6"
+  #   safari: "1.3"
+  #   safari_ios: "1"
+  - api.Element.scroll_event
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "6"
+  #   firefox_android: "6"
+  #   safari: "2"
+  #   safari_ios: "1"
+  - api.Document.scroll_event
 
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -863,6 +891,7 @@ compat_features:
   #   safari_ios: "11"
   - api.Document.close
   - api.Document.open
+  - api.Document.writeln
 
   # baseline: high
   # baseline_low_date: 2018-04-30
@@ -1187,6 +1216,18 @@ compat_features:
   #   safari_ios: "1"
   - api.HTMLElement.outerText
 
+  # baseline: low
+  # baseline_low_date: 2024-09-16
+  # support:
+  #   chrome: "125"
+  #   chrome_android: "125"
+  #   edge: "125"
+  #   firefox: "128"
+  #   firefox_android: "128"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - api.Element.getHTML
+
   # baseline: false
   # support:
   #   chrome: "56"
@@ -1196,3 +1237,10 @@ compat_features:
   #   firefox_android: "50"
   - api.Document.createElement.options_parameter
   - api.Document.createElementNS.options_parameter
+
+  # baseline: false
+  # support:
+  #   chrome: "102"
+  #   chrome_android: "102"
+  #   edge: "102"
+  - api.Element.beforematch_event
