--- a/features/server-sent-events.yml.dist
+++ b/features/server-sent-events.yml.dist
@@ -59,3 +59,28 @@ compat_features:
   #   safari: "7"
   #   safari_ios: "7"
   - api.EventSource.withCredentials
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "26"
+  #   chrome_android: "26"
+  #   edge: "79"
+  #   firefox: "11"
+  #   firefox_android: "45"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - api.EventSource.EventSource.options_withCredentials_parameter
+
+  # baseline: low
+  # baseline_low_date: 2024-11-26
+  # support:
+  #   chrome: "6"
+  #   chrome_android: "18"
+  #   edge: "79"
+  #   firefox: "133"
+  #   firefox_android: "133"
+  #   safari: "5"
+  #   safari_ios: "5"
+  - api.EventSource.worker_support
