--- a/features/clip.yml
+++ b/features/clip.yml
@@ -1,5 +1,5 @@
 name: clip
-description: TODO
+description: The `clip` CSS property sets the visible area of an absolutely positioned element.
 spec: https://drafts.fxtf.org/css-masking/#clip-property
 group: clipping-shapes-masking
 discouraged:
