--- a/features/glyph-orientation-vertical.yml
+++ b/features/glyph-orientation-vertical.yml
@@ -1,5 +1,5 @@
 name: glyph-orientation-vertical
-description: TODO
+description: The `glyph-orientation-vertical` CSS property sets the orientation of glyphs in text rendered in a vertical writing mode.
 spec: https://drafts.csswg.org/css-writing-modes-4/#glyph-orientation
 group: css
 discouraged:
