--- a/features/overflow-overlay.yml
+++ b/features/overflow-overlay.yml
@@ -1,5 +1,5 @@
 name: "`overflow: overlay`"
-description: "TODO Superceded by `overflow: auto`"
+description: "The `overflow: overlay` CSS declaration sets the behavior for when content doesn't fit in an element. It is superceded by `overflow: auto`."
 spec: https://drafts.csswg.org/css-overflow/#propdef-overflow
 group: css
 discouraged:
