--- a/features/color-adjust.yml
+++ b/features/color-adjust.yml
@@ -1,5 +1,5 @@
 name: color-adjust
-description: TODO
+description: The `color-adjust` shorthand CSS property allows multiple performance related color adjustments to be set at once. Setting the `print-color-adjust` CSS property directly is preferred, as it is the only such adjustment so far defined.
 spec: https://drafts.csswg.org/css-color-adjust-1/#color-adjust
 group: print
 discouraged:
