--- a/features/ime-mode.yml
+++ b/features/ime-mode.yml
@@ -1,5 +1,5 @@
 name: ime-mode
-description: TODO
+description: The `ime-mode` CSS property sets the state of the input method editor for text fields.
 spec: https://drafts.csswg.org/css-ui-3/#input-method-editor
 group: css
 discouraged:
