--- a/features/word-break-break-word.yml
+++ b/features/word-break-break-word.yml
@@ -1,5 +1,5 @@
 name: "`word-break: break-word`"
-description: "TODO Superceded by `overflow-wrap: anywhere`"
+description: "The `word-break: break-word` CSS declaration sets word breaks to occur according to their customary rules. It is superceded by `overflow-wrap: anywhere`"
 spec: https://drafts.csswg.org/css-text/#word-break-property
 group: css
 discouraged:
