--- a/features/writing-mode-deprecated.yml
+++ b/features/writing-mode-deprecated.yml
@@ -1,5 +1,5 @@
 name: Writing mode (deprecated)
-description: TODO
+description: The `lr`, `lr-tb`, `rl`, `rl-tb`, `tb`, and `tb-rl` keyword values represent writing modes for elements in SVG 1.1 documents.
 spec: https://drafts.csswg.org/css-writing-modes-4/#block-flow
 group: css
 discouraged:
