--- a/features/canvas-2d.yml
+++ b/features/canvas-2d.yml
@@ -107,7 +107,15 @@ compat_features:
   - api.Path2D.rect
   - api.Path2D.roundRect
   - api.TextMetrics
+  - api.TextMetrics.actualBoundingBoxAscent
+  - api.TextMetrics.actualBoundingBoxDescent
+  - api.TextMetrics.actualBoundingBoxLeft
+  - api.TextMetrics.actualBoundingBoxRight
   - api.TextMetrics.alphabeticBaseline
+  - api.TextMetrics.emHeightAscent
+  - api.TextMetrics.emHeightDescent
+  - api.TextMetrics.fontBoundingBoxAscent
+  - api.TextMetrics.fontBoundingBoxDescent
   - api.TextMetrics.hangingBaseline
   - api.TextMetrics.ideographicBaseline
   - api.TextMetrics.width
