Handle upstream key renames

--- a/features/svg.yml
+++ b/features/svg.yml
@@ -436,8 +436,8 @@ compat_features:
   - svg.elements.set.to
   - svg.elements.stop
   - svg.elements.stop.offset
-  - svg.elements.stop.stop-color
-  - svg.elements.stop.stop-opacity
+  - svg.global_attributes.stop-color
+  - svg.global_attributes.stop-opacity
   - svg.elements.style
   - svg.elements.style.media
   - svg.elements.style.title
